tests/src/Loader/classloader/generics/Instantiation/Negative/param02.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    public class _generics_Instantiation_Negative_param02_param02_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_param02_param02_cmd()
        {
            CoreclrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\param02\\param02.cmd");
        }
    }
}
